[package]
name = "x-ws"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.7", features = ["ws"] }
axum-extra = { version = "0.9.4", features = ["typed-header"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = [
    "local-time",
    "env-filter",
] }
time = { version = "0.3.36", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.24.0"
tower-http = { version = "0.6.1", features = ["fs", "trace"] }
headers = "0.4.0"
futures = "0.3.31"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
uuid = { version = "1.11.0", features = ["v4"] }
